# GRUPO_GAD

./: .copilotignore  .coverage  .dockerignore  .env.example  .env.production  .flake8  .gitignore  .pre-commit-config.yaml  ACTION_PLAN.md  ANALISIS_COMPLETO_16_PROMPTS.json  ANALISIS_MANUAL_VS_PROYECTO_REAL.md  ANTES_VS_DESPUES_FASE1.md  ARCHITECTURAL_ANALYSIS.md  ATTACK_PLAN.md  AUDITORIA_PRE_DESPLIEGUE_COMPLETA.md  AUDIT_PART1_DIAGNOSTIC.md  AUDIT_QUICK_WINS.md  BASELINE_PERFORMANCE.md  BASELINE_PERFORMANCE_OLD_12OCT.md  BLUEPRINT_DESPLIEGUE_EJECUTIVO.md  CHANGELOG.md  CHECKLIST_PRODUCCION.md  CIERRE_JORNADA_20251011.md  CIERRE_JORNADA_20251011_FINAL.md  CIERRE_SESION_15OCT2025_FASE3_COMPLETA.md  CIERRE_SESION_16OCT2025_FASE4_SECURITY_GDPR.md  CIERRE_SESION_16OCT2025_FASE5_FINAL_90PCT.md  CIERRE_SESION_16OCT2025_FASE5_PRODUCTION_DEPLOYMENT.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_COMPLETED.md  CLEANUP_PLAN.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CODE_REVIEW_REPORT.md  COMET_PROMPTS.md  COMPARATIVA_DB_OPTIONS.md  COMPLETE_DEPLOYMENT_PACKAGE.md  CONTRIBUTING.md  CRITICAL_ISSUES_FOUND.md  Caddyfile  (+147 more)
.ai/: CURRENT_WORK_STATUS.md  PLANIFICACION_COMPLETA_POST_DESARROLLO.md
.github/: copilot-instructions.md
.github/agents/: 01_PROJECT_COORDINATOR.md  02_SOLUTION_ARCHITECT.md  03_SOFTWARE_DEVELOPER.md  04_QA_AGENT.md  05_SECURITY_AGENT.md  06_PERFORMANCE_AGENT.md  README.md
.github/workflows/: cd.yml  ci-cd.yml  ci-enhanced.yml  ci.yml  docker.yml  release.yml  repo-size-audit.yml  security-audit.yml  stability.yml  standard.yml  validate.yml
alembic/: env.py  env_improved.py
alembic/versions/: 094f640cda5e_add_performance_indexes_tareas.py  41b34c160381_add_geom_to_efectivos.py  8a888f8e3bc5_add_audit_trail_tables.py  e062d9a5b51f_migración_limpia_sin_schema_gad_para_.py  f0a1b2c3d4e5_reset_schema_to_current_models.py
api/: crud.py  dependencies.py  main.py  models.py  schemas.py
b/: README.md
backups/git-mirror-20250906T062707Z/: HEAD  config  packed-refs
backups/old_audits/: # 🛡️ PROTOCOLO DE AUDITORÍA PRE-DESPLIE.md  CHECKLIST_PRODUCCION.md
bot/: Dockerfile  bot.py
config/: __init__.py  settings.py
deploy/: Caddyfile.example
docker/: Dockerfile.api  Dockerfile.api.simple  Dockerfile.bot  Dockerfile.cloudrun  docker-compose.override.local.yml  docker-compose.prod.local.yml  docker-compose.prod.yml  docker-compose.yml  init_postgis.sql  requirements.bot.txt
docs/: BACKUP_RESTORE_STRATEGY.md  CACHE_SYSTEM_GUIDE.md  CACHE_USAGE_GUIDE.md  CHECKLIST_PRE_DEPLOY.md  CI_CD_GUIDE.md  COBERTURA_NOTAS.md  CODE_REVIEW_REPORT.md  CONTINUACION_PROXIMOS_PASOS.md  DIAGNOSTICO_PLAN_GAD.md  DNS_CONFIGURATION_GUIDE.md  DOCUMENTATION_INDEX_CLEAN_2025-10-25.md  EXECUTIVE_SUMMARY_IMPLEMENTATION.md  FEEDBACK_IMPROVEMENT_PLAN.md  GO_NO_GO_CHECKLIST.md  GUARDRAILS_FULL_SUMMARY.md  GUARDRAILS_REGISTRY.md  GUARDRAILS_SUMMARY.md  IMPLEMENTATION_PHASE5_UPDATE.md  IMPLEMENTATION_SUMMARY_20251006.md  INDEX.md  ISSUE_GUARDRAILS_ENV_FIXES.md  LOAD_TESTING_GUIDE.md  MONITORING_ALERTING_GUIDE.md  MONITORING_SETUP.md  PLAYBOOK_FINALIZACION.md  PLAYBOOK_RISK_SCORE_TEMPLATE.md  PLAYBOOK_ROLLBACK_RUNBOOK.md  PLAYBOOK_TRIAGE_MATRIX.md  PRODUCTION_RUNBOOK.md  PRODUCTION_SERVER_SETUP.md  PROJECT_OVERVIEW.md  PROMETHEUS_METRICAS_DISENO.md  PROMETHEUS_METRICAS_IMPLEMENTACION.md  PR_BODY.md  PR_chore_guardrails_env_fixes.md  QUICK_WINS_FASE1_IMPLEMENTACION.md  README_PROMPTS_PASIVOS.md  README_UX_ANALYSIS.md  SECRETS_MANAGEMENT.md  SECRETS_MANAGEMENT_GUIDE.md  (+36 more)
reports/: SECURITY_AUDIT_RESULTS.md  any-exprs.txt  bandit_analysis.json  bandit_analysis.txt  bandit_report.json  flake8_analysis.json  flake8_analysis.txt  flake8_post_config.txt  gitleaks_report.json  mypy_analysis.json  mypy_current_analysis.txt  mypy_full_analysis.txt  prod_redis_provision_status_20251025.md  pylint_analysis.json  pylint_analysis.txt  radon_complexity.json  radon_complexity.txt  radon_maintainability.txt  safety_report.json  types-of-anys.txt  uat_staging_redis_complete_20251025.md  vulture_after_cleanup.txt  vulture_dead_code.txt  vulture_deadcode.json  vulture_deadcode.txt  vulture_final_check.txt  vulture_full_analysis.txt
scripts/: README.md  analyze_optimization.py  audit.sh  audit_compliance.sh  check_allowlist.py  code_review_analyzer.py  create_dashboard_test_data.py  ddl.sql  deploy_bot.sh  deploy_flyio.sh  deploy_prod.sh  deploy_production.sh  emergency_rollback.sh  fake_gemini.sh  fake_gemini2.sh  fast_gate_check.sh  guardrails.sh  health_check.sh  initial_data_migration.py  list-largest-blobs.sh  load_test_10x_simple.js  load_test_http.js  load_test_http_results.json  load_test_scaling.js  load_test_ws.js  load_test_ws_results.json  monitor_production.sh  perform_history_cleanup.sh  performance_test.py  post_deployment_verification.sh  pr_fast_gate_check.sh  pr_validate_complete.sh  prepare_repo_backup.sh  release_readiness_report.py  risk_score_calculator.py  rollback_production.sh  rotate_secrets.sh  run_load_tests.sh  seed_efectivos.sh  seed_efectivos.sql  (+15 more)
src/: __init__.py
templates/: base.html  crear_efectivo.html  crear_tarea.html  editar_efectivo.html  editar_tarea.html  efectivos.html  index.html  tarea_detalle.html
tests/: conftest.py  test_admin_bypass.py  test_auth_errors.py  test_cache_system.py  test_core_database.py  test_database.py  test_dependencies.py  test_dependencies_complete.py  test_dependencies_errors.py  test_emergency_endpoint.py  test_health_and_metrics.py  test_models.py  test_observability_metrics.py  test_routers.py  test_routers_tasks_complete.py  test_routers_users_complete.py  test_simple_integration.py  test_tasks_errors.py  test_users_errors.py  test_websocket_broadcast_metrics.py  test_websocket_import.py  test_websocket_integration_simple.py  test_websocket_manager_stats.py  test_websocket_stats.py  test_websocket_token_policy.py  test_websockets_core_simple.py  test_websockets_e2e.py  test_websockets_handshake.py  test_ws_pubsub_unit.py  ws_fixtures.py
workflows/: recordatorio_tareas.json  refresh_metricas.json  resumen_diario.json  sugerencias.json
(+350 files in other folders)
