[project]
name = "grupo_gad"
version = "0.1.0"
description = "Sistema de gestión administrativa gubernamental"
authors = [{ name = "Equipo GAD", email = "dev@grupogad.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
license = { text = "MIT" }
keywords = ["fastapi", "government", "administration", "gad"]
packages = [{ include = "grupo_gad", from = "src" }]

[project.optional-dependencies]
dev = [
	"pytest>=8.0.0",
	"pytest-asyncio>=0.23.0",
	"pytest-cov>=4.1.0",
	"ruff>=0.1.0",
	"mypy>=1.8.0",
	"pip-audit>=2.6.0",
	"bandit[toml]>=1.7.5"
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "grupo_gad"
version = "0.1.0"
description = "Sistema de gestión administrativa gubernamental"
authors = ["Equipo GAD <dev@grupogad.com>"]
readme = "README.md"
packages = [{ include = "grupo_gad", from = "src" }]

[tool.poetry.group.main.dependencies]
fastapi = ">=0.115.0,<1.0.0"
sqlalchemy = {version = ">=2.0.25,<3.0.0", extras = ["asyncio"]}
alembic = ">=1.13.2,<2.0.0"
pydantic = ">=2.8.0,<3.0.0"
pydantic-settings = ">=2.2.1,<3.0.0"
uvicorn = {version = ">=0.30.0,<1.0.0", extras = ["standard"]}
python-jose = {version = ">=3.3.0,<4.0.0", extras = ["cryptography"]}
passlib = {version = ">=1.7.4,<2.0.0", extras = ["bcrypt"]}
asyncpg = ">=0.29.0,<1.0.0"
aiosqlite = ">=0.20.0,<1.0.0"
python-dotenv = ">=1.0.0,<2.0.0"
httpx = ">=0.27.0,<1.0.0"
starlette = ">=0.47.2,<1.0.0"
ecdsa = ">=0.18.0,<1.0.0"
tenacity = ">=8.2.3,<9.0.0"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--cov=src --cov-report=html --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"
pytest-cov = "^7.0.0"
ruff = "^0.12.12"
mypy = "^1.17.1"
pip-audit = "^2.9.0"
bandit = {extras = ["toml"], version = "^1.8.6"}
alembic = "^1.16.5"